clusters/talos-cluster/zot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zot
  namespace: zot
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: zot
  template:
    metadata:
      labels:
        app: zot
    spec:
      containers:
      - name: zot
        image: ghcr.io/project-zot/zot:v2.1.5
        ports:
        - containerPort: 5000
          name: registry
        volumeMounts:
        - name: config
          mountPath: /etc/zot
        - name: data
          mountPath: /var/lib/zot
        args: ["serve", "/etc/zot/config.json"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits:
            memory: "2Gi"
            cpu: "200m"
      volumes:
      - name: config-template
        configMap:
          name: zot-config-template
      - name: config
        emptyDir: {}
      - name: data
        persistentVolumeClaim:
          claimName: zot-data-pvc
