clusters/talos-cluster/zot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zot
  namespace: zot
  annotations:
    external-dns.alpha.kubernetes.io/hostname: zot.horus
spec:
  type: ClusterIP
  selector:
    app: zot
  ports:
  - port: 5000
    targetPort: 5000
    name: registry
