clusters/talos-cluster/zot/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zot-cloudflare-route
  namespace: zot
spec:
  parentRefs:
  - name: cloudflare-gateway
    namespace: cloudflare-gateway
  hostnames:
  - "zot.maix.ovh"
  rules:
  - backendRefs:
    - name: zot
      port: 5000
